kuber=1.27 calico-v3.25.1 local-path-provisioner-v0.0.24 nginx-ingress-controller-v1.7.0

--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -54,6 +54,10 @@ docker:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
+  v1.27.1:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_debian: 5:20.10.*
 containerd:
   v1.21.2:
     version_rhel8: 1.4*
@@ -92,6 +96,9 @@ containerd:
     version_rhel8: 1.4*
     version_debian: 1.6.*
   v1.26.3:
+    version_rhel8: 1.4*
+    version_debian: 1.6.*
+  v1.27.1:
     version_rhel8: 1.4*
     version_debian: 1.6.*
 containerdio:
@@ -147,6 +154,10 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
+  v1.27.1:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_debian: 1.6.*
 podman:
   v1.21.2:
     version_rhel: 1.6.4*
@@ -197,6 +208,10 @@ podman:
     version_rhel8: "*"
     version_debian: "*"
   v1.26.3:
+    version_rhel: 1.6.4*
+    version_rhel8: "*"
+    version_debian: "*"
+  v1.27.1:
     version_rhel: 1.6.4*
     version_rhel8: "*"
     version_debian: "*"
