--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -31,7 +31,7 @@ calico:
     version: v3.24.2
   v1.26.3:
     version: v3.24.2
-  v1.27.1:
+  v1.26.4:
     version: v3.24.2
 nginx-ingress-controller:
   v1.21.2:
@@ -73,9 +73,9 @@ nginx-ingress-controller:
   v1.26.3:
     version: v1.4.0
     webhook-version: v20220916-gd32f8c343
-  v1.27.1:
-    version: v1.7.0
-    webhook-version: v20230312-helm-chart-4.5.2-28-g66a760794
+  v1.26.4:
+    version: v1.4.0
+    webhook-version: v20220916-gd32f8c343
 kubernetes-dashboard:
   v1.21.2:
     version: v2.5.1
@@ -116,7 +116,7 @@ kubernetes-dashboard:
   v1.26.3:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
-  v1.27.1:
+  v1.26.4:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
 local-path-provisioner:
@@ -159,6 +159,6 @@ local-path-provisioner:
   v1.26.3:
     version: v0.0.23
     busybox-version: 1.34.1
-  v1.27.1:
-    version: v0.0.24
+  v1.26.4:
+    version: v0.0.23
     busybox-version: 1.34.1
