--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -12,6 +12,8 @@ kubernetes_versions:
     supported: true
   v1.26:
     supported: true
+  v1.27:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.21.2:
@@ -92,7 +94,7 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.23
     crictl: v1.25.0
-  v1.26.4:
+  v1.27.1:
     calico: v3.24.2
     nginx-ingress-controller: v1.4.0
     kubernetes-dashboard: v2.7.0
