--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -32,7 +32,7 @@ calico:
   v1.26.3:
     version: v3.24.2
   v1.27.1:
-    version: v3.24.2
+    version: v3.25.1
 nginx-ingress-controller:
   v1.21.2:
     version: v1.2.0
@@ -74,8 +74,8 @@ nginx-ingress-controller:
     version: v1.4.0
     webhook-version: v20220916-gd32f8c343
   v1.27.1:
-    version: v1.4.0
-    webhook-version: v20220916-gd32f8c343
+    version: v1.7.0
+    webhook-version: v20230312-helm-chart-4.5.2-28-g66a760794
 kubernetes-dashboard:
   v1.21.2:
     version: v2.5.1
@@ -160,5 +160,5 @@ local-path-provisioner:
     version: v0.0.23
     busybox-version: 1.34.1
   v1.27.1:
-    version: v0.0.23
+    version: v0.0.24
     busybox-version: 1.34.1
