--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -54,6 +54,10 @@ docker:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
+  v1.26.4:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_debian: 5:20.10.*
   v1.27.1:
     version_rhel: 19.03*
     version_rhel8: 19.03*
@@ -96,6 +100,9 @@ containerd:
     version_rhel8: 1.4*
     version_debian: 1.6.*
   v1.26.3:
+    version_rhel8: 1.4*
+    version_debian: 1.6.*
+  v1.26.4:
     version_rhel8: 1.4*
     version_debian: 1.6.*
   v1.27.1:
@@ -154,6 +161,10 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
+  v1.26.4:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_debian: 1.6.*
   v1.27.1:
     version_rhel: 1.6*
     version_rhel8: 1.6*
@@ -208,6 +219,10 @@ podman:
     version_rhel8: "*"
     version_debian: "*"
   v1.26.3:
+    version_rhel: 1.6.4*
+    version_rhel8: "*"
+    version_debian: "*"
+  v1.26.4:
     version_rhel: 1.6.4*
     version_rhel8: "*"
     version_debian: "*"
