--- a/kubemarine/resources/configurations/compatibility/internal/thirdparties.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/thirdparties.yaml
@@ -28,6 +28,8 @@ kubeadm:
     sha1: 4efb3da49a50d137b728f0529bedee458e8c5f86
   v1.26.3:
     sha1: 86e202f98d22c8fddcadda6656f6698d21eae6ca
+  v1.26.4:
+    sha1: 7b2f579d06d00d545b2dc279df837d3c9d3e7ae6
   v1.27.1:
     sha1: d178257fa65dfa4694dea3262c618c6622804eb7
 kubelet:
@@ -57,6 +59,8 @@ kubelet:
     sha1: ace8ce244896aca5d38c8184c44226660a09269a
   v1.26.3:
     sha1: 5fe320fedaabb91d3770da19135412b7454bb28b
+  v1.26.4:
+    sha1: 07fc5049dd34744d1c45258ed23291c3e58d4abf
   v1.27.1:
     sha1: 43cb7231a889c01cfd88bd3f27441134e3d1cbff
 kubectl:
@@ -86,6 +90,8 @@ kubectl:
     sha1: a5b32c173670ee6fa7710d7158ea4a0d198c8af5
   v1.26.3:
     sha1: 56916d87c3caef05489db932fd9e48d32ebdf634
+  v1.26.4:
+    sha1: b4880f3423aaf68992cdac384289739ff810a07a
   v1.27.1:
     sha1: 0c3f1e262a6c37719ba4d66885df6715f58b60e5
 calicoctl:
@@ -130,6 +136,9 @@ calicoctl:
   v1.26.3:
     version: v3.24.2
     sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6
+  v1.26.4:
+    version: v3.25.1
+    sha1: bc3f20a899aca3f62451bb7d9b015b9805305216
   v1.27.1:
     version: v3.25.1
     sha1: bc3f20a899aca3f62451bb7d9b015b9805305216
@@ -175,6 +184,9 @@ crictl:
   v1.26.3:
     version: v1.25.0
     sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3
+  v1.26.4:
+    version: v1.27.0
+    sha1: 69b4973cd4542224c1790d1847e0e9a504f1a345
   v1.27.1:
     version: v1.27.0
     sha1: 69b4973cd4542224c1790d1847e0e9a504f1a345
