--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -94,6 +94,12 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.23
     crictl: v1.25.0
+  v1.26.4:
+    calico: v3.25.1
+    nginx-ingress-controller: v1.7.0
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.24
+    crictl: v1.27.0
   v1.27.1:
     calico: v3.25.1
     nginx-ingress-controller: v1.7.0
