--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -565,6 +565,9 @@ plugins:
             method: apply_yaml
             arguments:
               plugin_name: nginx-ingress-controller
+        - python:
+            module: plugins/clear_old_job_nginx.py
+            method: check_job_for_nginx
         - expect:
             daemonsets:
               - name: ingress-nginx-controller
