fix flag for kubelet and delete jobs for ingress nginx part.5

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -558,7 +558,7 @@ plugins:
       priority: 1
       procedures:
         - python:
-            module: plugins/clear_old_job_nginx.py
+            module: plugins/nginx_ingress.py
             method: check_job_for_nginx
         - python:
             module: plugins/nginx_ingress.py
