[MANOPD-87833] Added 1.27.1 , 1.26.4 , updated 3rd party (#427)
* kuber=1.27 calico-v3.25.1 local-path-provisioner-v0.0.24 nginx-ingress-controller-v1.7.0

* +    calico: v3.24.2
+    crictl: v1.25.0

* debug

* debug

* yaml fix

* 1.26

* 1.27

* 1.27

* remove --container-runtime option for kuber 1.27+

* 1.26.4

* Update integration_tests.yaml

* fix flag for kubelet and delete jobs for ingress nginx

* fix flag for kubelet and delete jobs for ingress nginx

* fix flag for kubelet and delete jobs for ingress nginx part.3

* Auto-update license header

* fix flag for kubelet and delete jobs for ingress nginx part.4

* fix flag for kubelet and delete jobs for ingress nginx part.5

* fix flag for kubelet and delete jobs for ingress nginx part.7

---------

Co-authored-by: Imadzuma <mar-gosha98@mail.ru>
Co-authored-by: Dmitry Yarovov <dmitrii.yarovov@netcracker.com>
Co-authored-by: dmyar21 <dmyar21@users.noreply.github.com>

--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -12,6 +12,8 @@ kubernetes_versions:
     supported: true
   v1.26:
     supported: true
+  v1.27:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.21.2:
@@ -92,5 +94,18 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.23
     crictl: v1.25.0
+  v1.26.4:
+    calico: v3.25.1
+    nginx-ingress-controller: v1.7.0
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.24
+    crictl: v1.27.0
+  v1.27.1:
+    calico: v3.25.1
+    nginx-ingress-controller: v1.7.0
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.24
+    crictl: v1.27.0
+
 
 # After any change, please run scripts/thirdparties/sync.py
