--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -27,6 +27,10 @@ kube-apiserver:
     version: v1.25.7
   v1.26.3:
     version: v1.26.3
+  v1.26.4:
+    version: v1.26.4
+  v1.27.1:
+    version: v1.27.1
 kube-controller-manager:
   v1.21.2:
     version: v1.21.2
@@ -54,6 +58,10 @@ kube-controller-manager:
     version: v1.25.7
   v1.26.3:
     version: v1.26.3
+  v1.26.4:
+    version: v1.26.4
+  v1.27.1:
+    version: v1.27.1
 kube-scheduler:
   v1.21.2:
     version: v1.21.2
@@ -81,6 +89,10 @@ kube-scheduler:
     version: v1.25.7
   v1.26.3:
     version: v1.26.3
+  v1.26.4:
+    version: v1.26.4
+  v1.27.1:
+    version: v1.27.1
 kube-proxy:
   v1.21.2:
     version: v1.21.2
@@ -108,6 +120,10 @@ kube-proxy:
     version: v1.25.7
   v1.26.3:
     version: v1.26.3
+  v1.26.4:
+    version: v1.26.4
+  v1.27.1:
+    version: v1.27.1
 pause:
   v1.21.2:
     version: 3.4.1
@@ -134,6 +150,10 @@ pause:
   v1.25.7:
     version: '3.8'
   v1.26.3:
+    version: '3.9'
+  v1.26.4:
+    version: '3.9'
+  v1.27.1:
     version: '3.9'
 etcd:
   v1.21.2:
@@ -162,6 +182,10 @@ etcd:
     version: 3.5.6-0
   v1.26.3:
     version: 3.5.6-0
+  v1.26.4:
+    version: 3.5.6-0
+  v1.27.1:
+    version: 3.5.7-0
 coredns/coredns:
   v1.21.2:
     version: v1.8.0
@@ -189,3 +213,7 @@ coredns/coredns:
     version: v1.9.3
   v1.26.3:
     version: v1.9.3
+  v1.26.4:
+    version: v1.9.3
+  v1.27.1:
+    version: v1.10.1
