--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -54,6 +54,14 @@ docker:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
+  v1.26.4:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_debian: 5:20.10.*
+  v1.27.1:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_debian: 5:20.10.*
 containerd:
   v1.21.2:
     version_rhel8: 1.4*
@@ -92,6 +100,12 @@ containerd:
     version_rhel8: 1.4*
     version_debian: 1.6.*
   v1.26.3:
+    version_rhel8: 1.4*
+    version_debian: 1.6.*
+  v1.26.4:
+    version_rhel8: 1.4*
+    version_debian: 1.6.*
+  v1.27.1:
     version_rhel8: 1.4*
     version_debian: 1.6.*
 containerdio:
@@ -147,6 +161,14 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
+  v1.26.4:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_debian: 1.6.*
+  v1.27.1:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_debian: 1.6.*
 podman:
   v1.21.2:
     version_rhel: 1.6.4*
@@ -197,6 +219,14 @@ podman:
     version_rhel8: "*"
     version_debian: "*"
   v1.26.3:
+    version_rhel: 1.6.4*
+    version_rhel8: "*"
+    version_debian: "*"
+  v1.26.4:
+    version_rhel: 1.6.4*
+    version_rhel8: "*"
+    version_debian: "*"
+  v1.27.1:
     version_rhel: 1.6.4*
     version_rhel8: "*"
     version_debian: "*"
