--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -31,6 +31,10 @@ calico:
     version: v3.24.2
   v1.26.3:
     version: v3.24.2
+  v1.26.4:
+    version: v3.25.1
+  v1.27.1:
+    version: v3.25.1
 nginx-ingress-controller:
   v1.21.2:
     version: v1.2.0
@@ -71,6 +75,12 @@ nginx-ingress-controller:
   v1.26.3:
     version: v1.4.0
     webhook-version: v20220916-gd32f8c343
+  v1.26.4:
+    version: v1.7.0
+    webhook-version: v20230312-helm-chart-4.5.2-28-g66a760794
+  v1.27.1:
+    version: v1.7.0
+    webhook-version: v20230312-helm-chart-4.5.2-28-g66a760794
 kubernetes-dashboard:
   v1.21.2:
     version: v2.5.1
@@ -109,6 +119,12 @@ kubernetes-dashboard:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.26.3:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
+  v1.26.4:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
+  v1.27.1:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
 local-path-provisioner:
@@ -150,4 +166,10 @@ local-path-provisioner:
     busybox-version: 1.34.1
   v1.26.3:
     version: v0.0.23
+    busybox-version: 1.34.1
+  v1.26.4:
+    version: v0.0.24
+    busybox-version: 1.34.1
+  v1.27.1:
+    version: v0.0.24
     busybox-version: 1.34.1
