[MANOPD-84744] fix remove_node.py in case of custom etc_hosts value (#424)
* fix remove_node.py in case of custom etc_hosts value

* Change work with etc_hosts and coredns.configmap.Hosts

* IN doc update and fix test_already_defined_hosts_config unit test

* fix test_add_hosts_config unit test

* Rework coredns.configmap.Hosts creation

* Fix unit tests

* fix unit tests

* minor fixes

* minor fixes

* fix coredns unit tests

* fix enrich_etc_hosts

* fix enrich_etc_hosts

* fix unit tests

* remove system.generate_etc_hosts_config_generated()

* optimize enrich_etc_hosts()

* optimize enrich_etc_hosts()

* update IN

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -181,6 +181,8 @@ services:
       - '{% if not nodes[0]["internal_address"]|isipv4 %}localhost{% endif %}'
       - '{% if not nodes[0]["internal_address"]|isipv4 %}localhost.localdomain{% endif %}'
 
+  etc_hosts_generated: {}
+
   audit:
     cluster_policy:
       apiVersion: audit.k8s.io/v1
@@ -261,6 +263,7 @@ services:
       - '-w /usr/bin/containerd -k docker'
 
   coredns:
+    add_etc_hosts_generated: true
     deployment:
       spec:
         template:
@@ -338,6 +341,9 @@ services:
           forward:
             - .
             - /etc/resolv.conf
+      Hosts: |
+        127.0.0.1 localhost localhost.localdomain
+        {% if not nodes[0]["internal_address"]|isipv4 %}::1 localhost localhost.localdomain{% endif %}
 
   loadbalancer:
     haproxy:
