--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -75,25 +75,12 @@ jobs:
       - name: Check paas
         id: test_check_paas
         run: kubemarine check_paas -c ${{ env.cluster_yaml_file }} --dump-location ./results/check_paas_dump/
-      - name: Collect Kubernetes logs
-        run: |
-          sudo journalctl -u kubelet -u kube-proxy -u kube-apiserver -u kube-controller-manager -u kube-scheduler > ./results/kube-logs.txt
-          sudo journalctl -u kubelet -u kube-proxy -u kube-apiserver -u kube-controller-manager -u kube-scheduler -o json > ./results/kube-logs.json
-          sudo journalctl -u etcd > ./results/etcd-logs.txt
-          sudo journalctl -u etcd -o json > ./results/etcd-logs.json
-          sudo journalctl -u coredns > ./results/coredns-logs.txt
-          sudo journalctl -u coredns -o json > ./results/coredns-logs.json
-          sudo journalctl > ./results/all-logs.txt
-          sudo journalctl -o json > ./results/all-logs.json
-
-      - name: Collect Docker logs
-        run: |
-          sudo journalctl -u docker > ./results/docker-logs.txt
-          sudo journalctl -u docker -o json > ./results/docker-logs.json
-  
       - name: Change not-recommended symbols in dump files
         if: failure()
-        run: rename 's/[:]/_/g' ./results/*/dump/*
+        run: |
+          sudo journalctl -u kubelet -u kube-proxy -u kube-apiserver -u kube-controller-manager -u kube-scheduler > ./results/kube-logs.txt
+          sudo journalctl > ./results/all-logs.txt 
+          rename 's/[:]/_/g' ./results/*/dump/*
       - name: Collect dump artifacts
         if: failure()
         uses: actions/upload-artifact@v3
