Additional arguments for nginx-ingress-controller

--- a/kubemarine/resources/schemas/definitions/plugins/nginx-ingress-controller.json
+++ b/kubemarine/resources/schemas/definitions/plugins/nginx-ingress-controller.json
@@ -43,6 +43,10 @@
           },
           "additionalProperties": false
         },
+        "args": {
+          "type": "array",
+          "description": "Additional arguments."
+        },
         "nodeSelector": {
           "$ref": "generic_plugin.json#/definitions/CommonNodeSelector"
         },
