--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -384,9 +384,10 @@ logging:
       level: debug
       correct_newlines: True
       colorize: true
+      format: "[%(levelname)s] %(message)s"
     dump:
       level: verbose
-      format: "%(asctime)s %(process)s %(thread)s %(name)s %(levelname)s [%(module)s.%(funcName)s] %(message)s"
+      format: "%(asctime)s [%(levelname)s] [%(module)s.%(funcName)s] %(message)s"
       colorize: False
       correct_newlines: True
 
