--- a/examples/cluster.yaml/typical-cluster.yaml
+++ b/examples/cluster.yaml/typical-cluster.yaml
@@ -1,5 +1,6 @@
 node_defaults:
   keyfile: "/home/username/.ssh/id_rsa"
+  password: password@123     #Use either keyfile or password.
   username: "centos"
 
 vrrp_ips:
