--- a/examples/cluster.yaml/full-cluster.yaml
+++ b/examples/cluster.yaml/full-cluster.yaml
@@ -1,6 +1,6 @@
 node_defaults:
   keyfile: "/home/username/.ssh/id_rsa"
-  password: password@123     #Use either keyfile or password.
+  password: '{{ env.PASS }}'     #Either keyfile or password can be used.
   username: "centos"
 
 vrrp_ips:
