[MANOPD-89259] Use_ssh_password_instead_of_ssh_key_in_k8s_installation (#470)
* fix3

* Documentation_update

* gateway_nodes_support

* comments_fix

* clean up a bit

---------

Co-authored-by: sergey kryazhev <sergey.kryazhev@netcracker.com>

--- a/examples/cluster.yaml/allinone-cluster.yaml
+++ b/examples/cluster.yaml/allinone-cluster.yaml
@@ -1,5 +1,6 @@
 node_defaults:
   keyfile: "/home/username/.ssh/id_rsa"
+  password: '{{ env.PASS }}'     #Either keyfile or password can be used.
   username: "centos"
 
 nodes:
