Add rocky 9.2, remove OL 9.1, remove rocky 8.8
Remove unnecessary chcon invocations. Instead, use mv -Z to copy files from /tmp

Changed default iptables package for rhel9

Fixed compatibility with haproxy & keeaplived up to minor part

Updated compatibility with docker-ce

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -498,6 +498,8 @@ services:
           package_name: 'conntrack-tools'
         semanage:
           package_name: 'policycoreutils-python-utils'
+        iptables:
+          package_name: 'iptables-nft'
 
 plugin_defaults:
   installation: {}
