add new version and fix procedure pss

--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -23,6 +23,8 @@ kube-apiserver:
     version: v1.26.4
   v1.27.1:
     version: v1.27.1
+  v1.27.3:
+    version: v1.27.3
 kube-controller-manager:
   v1.23.1:
     version: v1.23.1
@@ -46,6 +48,8 @@ kube-controller-manager:
     version: v1.26.4
   v1.27.1:
     version: v1.27.1
+  v1.27.3:
+    version: v1.27.3
 kube-scheduler:
   v1.23.1:
     version: v1.23.1
@@ -69,6 +73,8 @@ kube-scheduler:
     version: v1.26.4
   v1.27.1:
     version: v1.27.1
+  v1.27.3:
+    version: v1.27.3
 kube-proxy:
   v1.23.1:
     version: v1.23.1
@@ -92,6 +98,8 @@ kube-proxy:
     version: v1.26.4
   v1.27.1:
     version: v1.27.1
+  v1.27.3:
+    version: v1.27.3
 pause:
   v1.23.1:
     version: '3.6'
@@ -114,6 +122,8 @@ pause:
   v1.26.4:
     version: '3.9'
   v1.27.1:
+    version: '3.9'
+  v1.27.3:
     version: '3.9'
 etcd:
   v1.23.1:
@@ -138,6 +148,8 @@ etcd:
     version: 3.5.6-0
   v1.27.1:
     version: 3.5.7-0
+  v1.27.3:
+    version: 3.5.7-0
 coredns/coredns:
   v1.23.1:
     version: v1.8.6
@@ -160,4 +172,6 @@ coredns/coredns:
   v1.26.4:
     version: v1.9.3
   v1.27.1:
+    version: v1.10.1
+  v1.27.3:
     version: v1.10.1
