--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -134,6 +134,9 @@ jobs:
       - name: Check paas
         id: test_check_paas
         run: kubemarine check_paas -c ${{ env.cluster_yaml_file }} --dump-location ./results/check_paas_dump/
+      - name: Get events kubectl
+        if: failure()
+        run: kubectl get events --sort-by='.metadata.creationTimestamp' -A
       - name: Collect journalctl logs
         if: failure()
         run: |
