--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -29,6 +29,8 @@ calico:
     version: v3.26.1
   v1.27.3:
     version: v3.26.1
+  v1.28.0:
+    version: v3.26.1
 nginx-ingress-controller:
   v1.23.1:
     version: v1.2.0
@@ -64,6 +66,9 @@ nginx-ingress-controller:
     version: v1.8.1
     webhook-version: v20230407
   v1.27.3:
+    version: v1.8.1
+    webhook-version: v20230407
+  v1.28.0:
     version: v1.8.1
     webhook-version: v20230407
 kubernetes-dashboard:
@@ -103,6 +108,9 @@ kubernetes-dashboard:
   v1.27.3:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.28.0:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
 local-path-provisioner:
   v1.23.1:
     version: v0.0.22
@@ -138,5 +146,8 @@ local-path-provisioner:
     version: v0.0.24
     busybox-version: 1.34.1
   v1.27.3:
+    version: v0.0.24
+    busybox-version: 1.34.1
+  v1.28.0:
     version: v0.0.24
     busybox-version: 1.34.1
