--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -10,6 +10,8 @@ kubernetes_versions:
     supported: true
   v1.27:
     supported: true
+  v1.28:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.23.1:
@@ -79,6 +81,12 @@ compatibility_map:
     local-path-provisioner: v0.0.24
     crictl: v1.27.1
   v1.27.3:
+    calico: v3.26.1
+    nginx-ingress-controller: v1.8.1
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.24
+    crictl: v1.27.1
+  v1.28.0:
     calico: v3.26.1
     nginx-ingress-controller: v1.8.1
     kubernetes-dashboard: v2.7.0
