--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -57,18 +57,24 @@ compatibility_map:
     local-path-provisioner: v0.0.23
     crictl: v1.25.0
   v1.25.7:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.24.2
+    nginx-ingress-controller: v1.4.0
     kubernetes-dashboard: v2.7.0
-    local-path-provisioner: v0.0.24
-    crictl: v1.27.1
+    local-path-provisioner: v0.0.23
+    crictl: v1.25.0
   v1.26.3:
-    calico: v3.26.1
-    nginx-ingress-controller: v1.8.1
+    calico: v3.24.2
+    nginx-ingress-controller: v1.4.0
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.23
+    crictl: v1.25.0
+  v1.26.4:
+    calico: v3.25.1
+    nginx-ingress-controller: v1.7.0
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.24
-    crictl: v1.27.1
-  v1.26.4:
+    crictl: v1.27.0
+  v1.26.7:
     calico: v3.26.1
     nginx-ingress-controller: v1.8.1
     kubernetes-dashboard: v2.7.0
@@ -80,7 +86,7 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.24
     crictl: v1.27.1
-  v1.27.3:
+  v1.27.4:
     calico: v3.26.1
     nginx-ingress-controller: v1.8.1
     kubernetes-dashboard: v2.7.0
