--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -45,11 +45,15 @@ docker:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
+  v1.26.7:
+    version_rhel: 19.03*
+    version_rhel8: 19.03*
+    version_debian: 5:20.10.*
   v1.27.1:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
-  v1.27.3:
+  v1.27.4:
     version_rhel: 19.03*
     version_rhel8: 19.03*
     version_debian: 5:20.10.*
@@ -78,9 +82,11 @@ containerd:
     version_debian: 1.6.*
   v1.26.4:
     version_debian: 1.6.*
+  v1.26.7:
+    version_debian: 1.6.*
   v1.27.1:
     version_debian: 1.6.*
-  v1.27.3:
+  v1.27.4:
     version_debian: 1.6.*
   v1.28.0:
     version_debian: 1.6.*
@@ -125,11 +131,15 @@ containerdio:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
+  v1.26.7:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_debian: 1.6.*
   v1.27.1:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
-  v1.27.3:
+  v1.27.4:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_debian: 1.6.*
