--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -20,14 +20,16 @@ calico:
   v1.25.2:
     version: v3.24.2
   v1.25.7:
-    version: v3.26.1
+    version: v3.24.2
   v1.26.3:
-    version: v3.26.1
+    version: v3.24.2
   v1.26.4:
+    version: v3.25.1
+  v1.26.7:
     version: v3.26.1
   v1.27.1:
     version: v3.26.1
-  v1.27.3:
+  v1.27.4:
     version: v3.26.1
   v1.28.0:
     version: v3.26.1
@@ -54,18 +56,21 @@ nginx-ingress-controller:
     version: v1.4.0
     webhook-version: v20220916-gd32f8c343
   v1.25.7:
-    version: v1.8.1
-    webhook-version: v20230407
+    version: v1.4.0
+    webhook-version: v20220916-gd32f8c343
   v1.26.3:
-    version: v1.8.1
-    webhook-version: v20230407
+    version: v1.4.0
+    webhook-version: v20220916-gd32f8c343
   v1.26.4:
+    version: v1.7.0
+    webhook-version: v20230312-helm-chart-4.5.2-28-g66a760794
+  v1.26.7:
     version: v1.8.1
     webhook-version: v20230407
   v1.27.1:
     version: v1.8.1
     webhook-version: v20230407
-  v1.27.3:
+  v1.27.4:
     version: v1.8.1
     webhook-version: v20230407
   v1.28.0:
@@ -102,10 +107,13 @@ kubernetes-dashboard:
   v1.26.4:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.26.7:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
   v1.27.1:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
-  v1.27.3:
+  v1.27.4:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.28.0:
@@ -134,18 +142,21 @@ local-path-provisioner:
     version: v0.0.23
     busybox-version: 1.34.1
   v1.25.7:
-    version: v0.0.24
+    version: v0.0.23
     busybox-version: 1.34.1
   v1.26.3:
-    version: v0.0.24
+    version: v0.0.23
     busybox-version: 1.34.1
   v1.26.4:
+    version: v0.0.24
+    busybox-version: 1.34.1
+  v1.26.7:
     version: v0.0.24
     busybox-version: 1.34.1
   v1.27.1:
     version: v0.0.24
     busybox-version: 1.34.1
-  v1.27.3:
+  v1.27.4:
     version: v0.0.24
     busybox-version: 1.34.1
   v1.28.0:
