[CPDEV-91452] k8s v1.28.0 support and 3rdparty update (#491)
* add new version kubernetes and delete old version kubernetes

* delete beta 1.28

* add new version and fix procedure pss

* test

* test

* add software_upgrade.yaml

* test

* test

* fix test

* fix build macos binary

* fix build binary

* kubernetes 1.28 support

* delete old code

* fix migrate_cri.py

* refactor code

* update packages.yaml

* Minor improvements in unit tests

* Simplify enrichment of extra args for admission

* add new version kubernetes

* update check_paas.py

* update Installation.md

* update default version kubernetes

* update default version kubernetes, update procedure install pss, update Installation.md

---------

Co-authored-by: ilia1243 <8808144+ilia1243@users.noreply.github.com>

--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,8 +8,10 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
-  crictl: []
+  calicoctl:
+  - v1.27.1
+  crictl:
+  - v1.27.1
 packages:
   docker:
     version_rhel: []
@@ -30,7 +32,9 @@ packages:
     version_rhel8: false
     version_debian: false
 plugins:
-  calico: []
-  nginx-ingress-controller: []
+  calico:
+  - v1.27.1
+  nginx-ingress-controller:
+  - v1.27.1
   kubernetes-dashboard: []
   local-path-provisioner: []
